Changed to ProcessBuilder for exec